Fix the web layout issues and updated the modify_electronics home image

--- a/css/modify_electronics.css
+++ b/css/modify_electronics.css
@@ -4,6 +4,11 @@
     color: black;
 }
 
+.casa {
+    left: 15%;
+    width: 42%;
+}
+
 #options {
     float: left;
     width: 34%;
@@ -57,6 +62,7 @@
     display:flex;
     justify-content:center;
     align-items:center;
+    min-height: 20ex;
 }
 
 .selectable {
